[gd_scene load_steps=14 format=3 uid="uid://blwyokhup48vq"]

[ext_resource type="PackedScene" uid="uid://iyc288nhvx4t" path="res://Game Scenes/game_scene.tscn" id="1_1mimh"]
[ext_resource type="Script" path="res://UI/2D Scenes/menu_layout_ctrl.gd" id="1_goreh"]
[ext_resource type="PackedScene" uid="uid://rso3gymj47gc" path="res://UI/Buttons/Menu_Buttons.tscn" id="1_igv0p"]
[ext_resource type="Texture2D" uid="uid://d31ys5rw6kgtj" path="res://Artwork/Background/Background House.png" id="2_k6tng"]
[ext_resource type="SpriteFrames" uid="uid://bhqmsqisx4ul3" path="res://Artwork/Sprites/Window.tres" id="3_o2kqx"]
[ext_resource type="PackedScene" uid="uid://cc37y4dw05u16" path="res://UI/Labels/Title/Title Label.tscn" id="3_seatt"]
[ext_resource type="PackedScene" uid="uid://boicpk5r3jko7" path="res://Game Scenes/animation_controller.tscn" id="6_6qa1m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kgwqm"]
atlas = ExtResource("2_k6tng")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_0r1u7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgwqm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ke05n"]
resource_name = "Window Walk 1"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window 1:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o2kqx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Window 1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_sa7by"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window 1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Window 2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7gru8"]
resource_name = "Window Walk 2"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window 2:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o2kqx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Window 2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0999999, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aec0d"]
_data = {
"RESET": SubResource("Animation_sa7by"),
"Window Walk 1": SubResource("Animation_ke05n"),
"Window Walk 2": SubResource("Animation_7gru8")
}

[node name="Menu Layout_CTRL" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goreh")

[node name="Background" type="Node2D" parent="."]

[node name="Whole Background" type="AnimatedSprite2D" parent="Background"]
position = Vector2(576, 324)
sprite_frames = SubResource("SpriteFrames_0r1u7")

[node name="Window 1" type="AnimatedSprite2D" parent="Background"]
position = Vector2(576, 488)
sprite_frames = ExtResource("3_o2kqx")
animation = &"Window Walk"
frame = 1

[node name="Window walking 1" type="Timer" parent="Background/Window 1"]
autostart = true

[node name="Window Walk 1" type="AnimationPlayer" parent="Background/Window 1"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_aec0d")
}

[node name="Window 2" type="AnimatedSprite2D" parent="Background"]
position = Vector2(768, 488)
sprite_frames = ExtResource("3_o2kqx")
animation = &"Window Walk"

[node name="Window walking 2" type="Timer" parent="Background/Window 2"]
wait_time = 10.0
autostart = true

[node name="Window Walk 2" type="AnimationPlayer" parent="Background/Window 2"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_aec0d")
}

[node name="Title Labels" type="Control" parent="." groups=["Title Labels"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="G" parent="Title Labels" instance=ExtResource("3_seatt")]
layout_mode = 0
offset_left = 446.0
offset_top = -110.0
offset_right = 494.0
offset_bottom = -23.0

[node name="U" parent="Title Labels" instance=ExtResource("3_seatt")]
layout_mode = 0
offset_left = 504.0
offset_top = -110.0
offset_right = 552.0
offset_bottom = -23.0
text = "U
"

[node name="I" parent="Title Labels" instance=ExtResource("3_seatt")]
layout_mode = 0
offset_left = 543.0
offset_top = -110.0
offset_right = 598.0
offset_bottom = -23.0
text = "I"

[node name="L" parent="Title Labels" instance=ExtResource("3_seatt")]
layout_mode = 0
offset_left = 589.0
offset_top = -110.0
offset_right = 637.0
offset_bottom = -23.0
text = "L"

[node name="D" parent="Title Labels" instance=ExtResource("3_seatt")]
layout_mode = 0
offset_left = 643.0
offset_top = -110.0
offset_right = 691.0
offset_bottom = -23.0
text = "D
"

[node name="Manager" parent="Title Labels" instance=ExtResource("3_seatt")]
layout_mode = 0
offset_left = -370.0
offset_top = 241.0
offset_right = -5.0
offset_bottom = 328.0
text = "MANAGER
"

[node name="Title Timer" type="Timer" parent="Title Labels"]
wait_time = 0.1
autostart = true

[node name="Game Scene" parent="." instance=ExtResource("1_1mimh")]
visible = false
layout_mode = 1

[node name="Main Menu" type="HBoxContainer" parent="." groups=["Main Menu"]]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -148.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Play" parent="Main Menu" groups=["Play Button"] instance=ExtResource("1_igv0p")]
layout_mode = 2

[node name="New Game" parent="Main Menu" instance=ExtResource("1_igv0p")]
visible = false
layout_mode = 2
text = "New Game"

[node name="Settings" parent="Main Menu" instance=ExtResource("1_igv0p")]
layout_mode = 2
text = "Settings
"

[node name="Quit" parent="Main Menu" instance=ExtResource("1_igv0p")]
layout_mode = 2
text = "Quit Game
"

[node name="Animation Controller" parent="." instance=ExtResource("6_6qa1m")]
layout_mode = 2
anchors_preset = 0

[connection signal="timeout" from="Background/Window 1/Window walking 1" to="." method="_on_window_walking_1_timeout"]
[connection signal="timeout" from="Background/Window 2/Window walking 2" to="." method="_on_window_walking_2_timeout"]
[connection signal="timeout" from="Title Labels/Title Timer" to="." method="_on_title_timer_timeout"]
